;-*-rst-*-

======================
p4a.ploneevent Changes
======================

p4a.ploneevent 0.x.x (Unreleased)
=================================

* Merged german translation from locales-included branch.  (saily)

* Fix translation issue with times in event view on English sites. Now uses 
  toLocalizedTime for displaying times to suit all locales.  (rockdj)
  
* Corrected one failing unit test. (rockdj)

p4a.ploneevent 0.7.3 (2009-11-27)
=================================

* Now displays events with 12H or 24H clock depending on locale. (regebro)

p4a.ploneevent 0.7.2 (2009-09-23)
=================================

* Fixed a bug in viewing of non-recurring events

p4a.ploneevent 0.7.1 (2009-08-29)
=================================

* Fixed a bug in the norwegian translation. (regebro)

p4a.ploneevent 0.7 (2009-08-26)
===============================

* Translations to Swedish and Norwegian. (regebro)


p4a.ploneevent 0.6 (2009-05-17)
===============================

* Fixed up dependencies (regebro, natea)

* Added KSS UI enhancements, reordered and relabled recurrence fields 
  to better describe field functions (aaronvanderlip)
  
* Cleaned up "Recurrence" schemata UI. Added new labels and descriptions. 
  Removed 'count'. Reordered fields. (aaronvanderlip)


p4a.ploneevent 0.5 (2008-07-09)
===============================

* First release: Basic recurrence support.